--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <button class="border px-6 py-4 rounded-2xl" id="connectButton">
         Connect Wallet
         <span id="loading"><span>&bull;</span><span>&bull;</span><span>&bull;</span></span>
+        <span id="walletID"></span>
       </button>
       <div class="flex gap-5 items-center">
         <a href="#">
