--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <a href="#buy">
         <p>Buy</p>
       </a>
-      <button class="border px-6 py-4 rounded-2xl" id="connectButton">
+      <button class="border px-6 py-4 rounded-2xl" id="desktopConnectButton">
         Connect Wallet
       </button>
       <div class="flex gap-5 items-center">
@@ -52,6 +52,7 @@
     <div
       class="absolute w-[calc(100%-16px)] flex md:hidden md:flex-row justify-between items-center text-2xl my-4 mx-2">
       <img src="./assets/header.png" class="w-[60px] h-[60px]" />
+      <button class="border px-6 py-4 rounded-2xl" id="mobileConnectButton">Connect Wallet</button>
       <img src="./assets/icons/hamburger.svg" id="navToggleIcon" onclick="showNav()" class="z-[100] w-8 h-8" />
     </div>
 
@@ -72,7 +73,6 @@
       <a href="#buy">
         <p onclick="showNav()">Buy</p>
       </a>
-      <button class="border px-6 py-4 rounded-2xl" onclick="showNav()" id="connectButton">Connect Wallet</button>
       <div class="flex gap-5 items-center">
         <a href="#">
           <img src="./assets/icons/Telegram App.svg" class="w-8 h-8" onclick="showNav()" />
@@ -83,7 +83,7 @@
       </div>
     </div>
 
-    <img src="./assets/home.png" class="w-auto h-[calc(100vh+40px)] mt-[-40px]" />
+    <img src="./assets/home.png" class="w-auto md:h-[calc(100vh+40px)] mt-[-40px]" />
   </section>
 
   <div class="flex flex-col items-center justify-center gap-14 mx-2 lg:mx-0">
