--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
   </div>
 
   <div class="gtranslate_wrapper"></div>
-  <script>window.gtranslateSettings = { "default_language": "en", "languages": ["en", "fr", "de", "it", "es"], "wrapper_selector": ".gtranslate_wrapper" }</script>
+  <script>window.gtranslateSettings = { "default_language": "en", "languages": ["en", "ar", "bg", "zh-CN", "zh-TW", "cs", "nl", "fr", "de", "el", "hu", "id", "it", "ja", "ko", "fa", "pl", "pt", "ro", "ru", "sk", "es", "th", "tr", "vi"], "wrapper_selector": ".gtranslate_wrapper" }</script>
   <script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
 
   <script type="text/javascript" src="./assets/js/wallet.js"></script>
