--- a/terms.html
+++ b/terms.html
@@ -149,6 +149,10 @@
       </ul>
     </section>
   </div>
+
+  <div class="gtranslate_wrapper"></div>
+  <script>window.gtranslateSettings = { "default_language": "en", "languages": ["en", "ar", "bg", "zh-CN", "zh-TW", "cs", "nl", "fr", "de", "el", "hu", "id", "it", "ja", "ko", "fa", "pl", "pt", "ro", "ru", "sk", "es", "th", "tr", "vi"], "wrapper_selector": ".gtranslate_wrapper" }</script>
+  <script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
 </body>
 
 </html>
