fix: minor update

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <img src="./assets/icons/hamburger.svg" id="navToggleIcon" onclick="showNav()" class="w-10 h-10 mr-5" />
         <img src="./assets/header.png" class="w-[40px] h-[40px]" />
       </div>
-      <button class="text-sm border px-3 py-2 rounded-2xl" id="mobileConnectButton">Connect Wallet</button>
+      <button class="text-sm border px-3 py-2 rounded-lg" id="mobileConnectButton">Connect Wallet</button>
     </div>
 
     <div id="navBar"
