--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           Explore our lunar-inspired universe now!
         </p>
         <div class="flex flex-col md:flex-row text-white w-full justify-between pt-10 px-5 uppercase">
-          <a href="#">
+          <a href="./assets/pdf/THEMOONMEMES.pdf" target="_blank">
             <p class="text-center py-2 rounded-lg text-4xl mb-10 min-w-[250px] bg-[#BD00FF] border border-white">
               Whitepaper
             </p>
